frontend/test/should_pass/basic_017.grg
rule r {
	x : Node;
	y : Node;
	negative {
		x --> y;
	}

	replace {
		x;
	}
}

