frontend/test/should_fail/edge_into_neg_005.grg
rule r {
	-e:Edge->a:Node;
	negative {
		x:Node-e->y:Node;
	}
	replace{}
}
